Update Java to 17
This removes the use of preview feature command-line arguments, as
records are full features in 17.